--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,8 @@ env:
   - INSTANCE=nginx-centos-7
   - INSTANCE=default-ubuntu-1604
   - INSTANCE=nginx-ubuntu-1604
+  - INSTANCE=default-ubuntu-1404
+  - INSTANCE=nginx-ubuntu-1404
 
 # Don't `bundle install`
 install: echo "skip bundle install"
