--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,16 +1,36 @@
----
 driver:
-  name: vagrant
+  name: dokken
+  privileged: true # because Docker and SystemD/Upstart
+  chef_image: chef/chef
+  chef_version: latest
+
+transport:
+  name: dokken
 
 provisioner:
-  name: chef_zero
+  name: dokken
+  client_rb:
+    diff_disabled: true
 
 verifier:
   name: inspec
 
 platforms:
-  - name: centos-7.4
+  - name: centos-7
+    driver:
+      image: centos:7
+      platform: rhel
+      pid_one_command: /usr/lib/systemd/systemd
+      intermediate_instructions:
+        - RUN yum -y install openssl lsof which systemd-sysv initscripts wget net-tools sudo
+
   - name: ubuntu-16.04
+    driver:
+      image: ubuntu:16.04
+      pid_one_command: /bin/systemd
+      intermediate_instructions:
+        - RUN /usr/bin/apt-get update
+        - RUN /usr/bin/apt-get install openssl apt-transport-https lsb-release procps net-tools sudo -y
 
 suites:
   - name: default
