--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,7 +1,6 @@
 driver:
   name: dokken
   privileged: true # because Docker and SystemD/Upstart
-  chef_image: chef/chef
   chef_version: latest
 
 transport:
@@ -9,8 +8,7 @@ transport:
 
 provisioner:
   name: dokken
-  client_rb:
-    diff_disabled: true
+  deprecations_as_errors: true
 
 verifier:
   name: inspec
@@ -18,19 +16,15 @@ verifier:
 platforms:
   - name: centos-7
     driver:
-      image: centos:7
-      platform: rhel
+      image: dokken/centos-7
       pid_one_command: /usr/lib/systemd/systemd
-      intermediate_instructions:
-        - RUN yum -y install openssl lsof which systemd-sysv initscripts wget net-tools sudo
 
   - name: ubuntu-16.04
     driver:
-      image: ubuntu:16.04
+      image: dokken/ubuntu-16.04
       pid_one_command: /bin/systemd
       intermediate_instructions:
         - RUN /usr/bin/apt-get update
-        - RUN /usr/bin/apt-get install openssl apt-transport-https lsb-release procps net-tools sudo -y
 
 suites:
   - name: default
