--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ dist: trusty
 addons:
   apt:
     sources:
-      - chef-stable-trusty
+      - chef-current-trusty
     packages:
       - chefdk
 
@@ -15,15 +15,11 @@ services: docker
 
 env:
   matrix:
-  - INSTANCE=default-centos-7
-  - INSTANCE=nginx-centos-7
-  - INSTANCE=default-ubuntu-1604
-  - INSTANCE=nginx-ubuntu-1604
+    - INSTANCE=default-centos-7
+    - INSTANCE=nginx-centos-7
+    - INSTANCE=default-ubuntu-1604
+    - INSTANCE=nginx-ubuntu-1604
 
-# Don't `bundle install`
-install: echo "skip bundle install"
-
-# Ensure we make ChefDK's Ruby the default
 before_script:
   # https://github.com/zuazo/kitchen-in-travis-native/issues/1#issuecomment-142230889
   - sudo iptables -L DOCKER || ( echo "DOCKER iptables chain missing" ; sudo iptables -N DOCKER )
@@ -32,7 +28,7 @@ before_script:
   - /opt/chefdk/embedded/bin/cookstyle --version
   - /opt/chefdk/embedded/bin/foodcritic --version
 
-script: KITCHEN_LOCAL_YAML=.kitchen.docker.yml /opt/chefdk/embedded/bin/kitchen verify ${INSTANCE}
+script: KITCHEN_LOCAL_YAML=.kitchen.dokken.yml /opt/chefdk/embedded/bin/kitchen verify ${INSTANCE} -l debug
 
 matrix:
   include:
