--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -8,7 +8,7 @@ transport:
 
 provisioner:
   name: dokken
-  deprecations_as_errors: true
+  deprecations_as_errors: false
 
 verifier:
   name: inspec
